--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "paquettg/php-html-parser": "^1.6",
-        "guzzlehttp/guzzle": "^6.0"
+        "guzzlehttp/guzzle": "^6.0",
+        "doctrine/dbal": "^2.5",
+        "jwage/purl": "^0.0.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
